--- a/src/app.html
+++ b/src/app.html
@@ -4,11 +4,22 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width" />
+    <title>Bageth</title>
+    <meta property="description" content="A set of tools on Ethereum featuring Kiln's API" />
+
+    <meta property="og:title" content="Bageth" />
+    <meta property="og:description" content="A set of tools on Ethereum featuring Kiln's API" />
+    <meta property="og:image" content="%sveltekit.assets%/favicon.png">
+    <meta property="og:url" content="https://bageth.nakamotards.com" />
+
+    <meta property="twitter:title" content="Bageth">
+    <meta property="twitter:image" content="%sveltekit.assets%/favicon.png" />
+    <meta property="twitter:description" content="A set of tools on Ethereum featuring Kiln's API">
+    <meta property="twitter:card" content="summary">
+
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents">
-      %sveltekit.body%
-    </div>
+    <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
