fix favion in og params

--- a/src/app.html
+++ b/src/app.html
@@ -9,11 +9,11 @@
 
     <meta property="og:title" content="Bageth" />
     <meta property="og:description" content="A set of tools on Ethereum featuring Kiln's API" />
-    <meta property="og:image" content="%sveltekit.assets%/favicon.png">
+    <meta property="og:image" content="https://bageth.nakamotards.com/favicon.png">
     <meta property="og:url" content="https://bageth.nakamotards.com" />
 
     <meta property="twitter:title" content="Bageth">
-    <meta property="twitter:image" content="%sveltekit.assets%/favicon.png" />
+    <meta property="twitter:image" content="https://bageth.nakamotards.com/favicon.png" />
     <meta property="twitter:description" content="A set of tools on Ethereum featuring Kiln's API">
     <meta property="twitter:card" content="summary">
 
